fixed disc postion on mobile

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -508,7 +508,7 @@ p{
     }
 
     .discs{
-        /* top:8.3%; */
+        top:8.3%;
         right: 0;
     }
 
